--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "landing page",
   "source": "index.html",
   "scripts": {
-    "sass:watch": "sass --style=expanded --watch styles:dist"
+    "sass:watch": "sass --style=expanded --watch styles:dist",
+    "parcel:watch": "parcel serve --dist-dir public",
+    "parcel:build": "parcel build --dist-dir build --public-url ./"
   },
   "repository": {
     "type": "git",
@@ -16,7 +18,6 @@
     "url": "https://github.com/RuDeNoID814/landing_live_streaming/issues"
   },
   "homepage": "https://github.com/RuDeNoID814/landing_live_streaming#readme",
-  "main": "index.html",
   "dependencies": {
     "parcel": "^2.15.2",
     "sass": "^1.89.0"
